# android_LY

./: .gitattributes  README.md  install.bat  install.sh  main.py  requirements.txt
mtkclient-main/: README.md  learning_resources.md  mtk.bat  mtk.py  mtk_gui.bat  mtk_gui.py  mtk_standalone.spec  pyproject.toml  requirements.txt  stage2.py
mtkclient-main/Tools/: brom_to_offs.py  da_parser.py  emulate_preloader.py  payload.bin.idb  preloader_emu_mmc.py
mtkclient-main/mtkclient/config/: brom_config.py  mtk_config.py
mtkclient-main/mtkclient/gui/: eraseFlashPartitions.py  main_gui.py  main_gui.ui
mtkclient-main/src/da_x/: CMakeLists.txt  Makefile.v5  build.sh  da_x.c  readme.build
mtkclient-main/src/da_x/common/: defs.h  flash_handler.c  flash_handler.h  generic.ld  libc.c  libc.h  linker.ld  start.S
mtkclient-main/src/da_x/crypto/: dxcc.c  dxcc.h  rotate-bits.h  sej.c  sej.h
mtkclient-main/src/da_x/crypto/V5/: rpmb.c  rpmb.h
